--- a/index.html
+++ b/index.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Hora do Dia</title>
     <link rel="shortcut icon" href="relogio.png" type="image/x-icon">
-
 </head>
 
 <body onload="carregar()">
-    <!-- <header id = 'cabeca'> -->
         <h1>Hora do dia</h1>   
-    <!-- </header> -->
-    
     <div id = 'msg'>
         Carregando...
     </div>
-
     <section id = 'fala'>
         <p> 
             Olá! Esse site simples foi desenvolvido por Gabriel Duete, 
@@ -28,10 +22,8 @@
             A imagem de fundo deve mudar entre os horários de 00:00-12:00, 13:00-18:00 e 19:00-23:00.
             <br>
             <br>
-            <a href="https://github.com/gabrielduete/horadodia">Veja mais detalhes do projeto no meu github.</a>
+            <a href="https://github.com/gabrielduete/horadodia" target="_blank">Veja mais detalhes do projeto no meu github.</a>
         </p>
-
-
     </section>
 
     <footer id = 'rodape'>
